Fix menu on mobile devices.
Fix menu on mobile devices (height bag).

--- a/source/css/style.css
+++ b/source/css/style.css
@@ -125,7 +125,6 @@ main {
 
 .menu {
     width: 40%;
-    height: 100vh;
     position: absolute;
     right: 0;
     transform: translateX(100%);
